# Temperature

./: README.md  hot-swap.sh  meson.build  meson.build~
data/: com.github.abbysoft-team.temperature.appdata.xml.in  com.github.abbysoft-team.temperature.appdata.xml.in~  com.github.abbysoft-team.temperature.desktop.in  com.github.abbysoft-team.temperature.desktop.in~  com.github.abbysoft-team.temperature.gresource.xml  com.github.abbysoft-team.temperature.gresource.xml~
src/: Application.vala  meson.build
